# iris_command

./: .gitignore  CLAUDE.md  README.md  process_drone.py
backend/: .gitignore  Cargo.toml  README.md  build.rs  export_onnx.py  schema.sql  trt_engine.sh
backend/data/: mediamtx.yml  rtsp_links.yml
backend/data/uploads/recordings/: drone_analysis_20260128_133915.mkv
backend/src/: analytics.rs  control.rs  db.rs  helpers.rs  main.rs  mediamtx.rs  state.rs  trt.rs  trt_yolo.rs
backend/trt_wrapper/: trt_wrapper.cpp
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/api/: [...path].js
frontend/src/: App.css  App.jsx  Login.jsx  config.js  index.css  main.jsx
frontend/src/components/: Login.jsx
frontend/src/components/Dashboard/: Footer.jsx  Header.jsx  IRISLoader.jsx  LeftPanel.jsx  RightPanel.jsx  WelcomeScreen.jsx
frontend/src/components/Globe/: Earth.jsx  Markers.jsx  Scene.jsx
frontend/src/components/UI/: Card.jsx  HLSVideo.jsx  WebRTCVideo.jsx
py_backend/: README.md  app.py  control_server.py  crowd.py  helpers.py  inference.py  log_utils.py  login.py  overlays.py  report.py  requirements.txt  sam.py  server.py  shared_inference.py  start_backend.sh  yolobyte.py
py_backend/config/: mediamtx.yml  rtsp_links.yml
py_backend/data/: auth.db  mediamtx.yml  rtsp_links.yml
py_backend/service/: install_systemd.sh  iris-backend.service  iris-command.env  iris-mediamtx.service  run_backend.sh  run_mediamtx.sh
