[package]
name = "drone_analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
opencv = "0.98"
jamtrack-rs = { git = "https://github.com/kadu-v/jamtrack-rs.git" }
ultralytics-inference = { git = "https://github.com/ultralytics/inference.git" }
chrono = "0.4"
crossbeam-channel = "0.5"
ndarray = "=0.17.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sysinfo = "0.38.0"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
ctrlc = "3.4"

[features]
default = ["nvidia"]
cuda = ["ultralytics-inference/cuda"]
tensorrt = ["ultralytics-inference/tensorrt"]
nvidia = ["cuda", "tensorrt", "trt_engine"]
trt_engine = []

[build-dependencies]
cc = "1"
